--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -6,11 +6,21 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: @lingui/cli\n"
 "Language: en\n"
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Plural-Forms: \n"
 
-#: src/components/Menu.tsx:41
-msgid "list of notes"
-msgstr "list of notes"
+#: src/app/components/MainMenuList.tsx:25
+msgid "Explore"
+msgstr "Explore"
 
-#: src/components/Menu.tsx:40
+#: src/app/components/MainMenuList.tsx:31
+msgid "Test"
+msgstr "Test"
+
+#: src/app/MainLayout.tsx:17
 msgid "Writer App"
 msgstr "Writer App"
