--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -43,6 +43,10 @@ msgstr "Filesystem"
 msgid "Import & export your collection"
 msgstr "Import & export your collection"
 
+#: src/app/MainLayout.tsx:20
+msgid "Kiwi Meri"
+msgstr "Kiwi Meri"
+
 #: src/settings/storage/ImportExportCollectionSettings.tsx:80
 msgid "Manually backup or restore your collection"
 msgstr "Manually backup or restore your collection"
@@ -79,10 +83,6 @@ msgstr "Success!"
 msgid "Synchronize your collection on the filesystem"
 msgstr "Synchronize your collection on the filesystem"
 
-#: src/app/MainLayout.tsx:15
-msgid "Writer App"
-msgstr "Writer App"
-
 #: src/settings/storage/ImportExportCollectionSettings.tsx:86
-msgid "Your backups will be exported to the Documents/WriterApp directory"
-msgstr "Your backups will be exported to the Documents/WriterApp directory"
+msgid "Your backups will be exported to the Documents/KiwimeriApp directory"
+msgstr "Your backups will be exported to the Documents/KiwimeriApp directory"
