update default preview for doc

--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -67,6 +67,10 @@ msgid "Download Logs"
 msgstr "Download Logs"
 
 #: src/common/wysiwyg/pages/KiwimeriPagesBrowserPlugin.tsx:68
+msgid "empty doc"
+msgstr "empty doc"
+
+#: src/common/wysiwyg/pages/KiwimeriPagesBrowserPlugin.tsx:69
 msgid "empty page"
 msgstr "empty page"
 
