--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -176,10 +176,12 @@ msgstr "Filesystem"
 msgid "Home"
 msgstr "Home"
 
+#. placeholder {0}: params.zipData.zipName
 #: src/common/modals/ConfirmMultipleImportModal.tsx:112
 msgid "Import {0}.zip in a new Notebook"
 msgstr "Import {0}.zip in a new Notebook"
 
+#. placeholder {0}: params.zipData.zipName
 #: src/common/modals/ConfirmMultipleImportModal.tsx:105
 msgid "Import {0}.zip in folder {parentName}"
 msgstr "Import {0}.zip in folder {parentName}"
@@ -220,7 +222,7 @@ msgstr "Kiwimeri format (single file)"
 msgid "Leave empty for root"
 msgstr "Leave empty for root"
 
-#: src/common/wysiwyg/lexical/EditLinkPlugin.tsx:52
+#: src/common/wysiwyg/lexical/EditLinkPlugin.tsx:54
 msgid "Link"
 msgstr "Link"
 
@@ -228,10 +230,12 @@ msgstr "Link"
 msgid "Loading..."
 msgstr "Loading..."
 
+#. placeholder {0}: localChanges.length
 #: src/synchronization/components/LocalChangesCard.tsx:42
 msgid "Local Changes ({0})"
 msgstr "Local Changes ({0})"
 
+#. placeholder {0}: dateToStr('datetime', lastLocalChange)
 #: src/synchronization/components/LocalChangesCard.tsx:48
 msgid "Local: {0}"
 msgstr "Local: {0}"
@@ -357,6 +361,7 @@ msgstr "Pick a directory for your backups"
 msgid "Remote Configuration"
 msgstr "Remote Configuration"
 
+#. placeholder {0}: dateToStr('datetime', lastRemoteChange)
 #: src/synchronization/components/LocalChangesCard.tsx:55
 msgid "Remote: {0}"
 msgstr "Remote: {0}"
@@ -421,7 +426,7 @@ msgstr "Synchronize your collection on the filesystem"
 msgid "Syncing is disabled on the web version."
 msgstr "Syncing is disabled on the web version."
 
-#: src/common/wysiwyg/lexical/EditLinkPlugin.tsx:41
+#: src/common/wysiwyg/lexical/EditLinkPlugin.tsx:43
 msgid "Text"
 msgstr "Text"
 
